--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
 html {
   font-size: 10px;
   font-family: sans-serif;
@@ -6,6 +8,11 @@ html {
 * {
   margin: 0;
   padding: 0;
+}
+
+body{
+  overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
 }
 
 #root {
