--- a/client/src/styles/ProjectList.css
+++ b/client/src/styles/ProjectList.css
@@ -1,7 +1,7 @@
 .project-list-container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 80vw;
   margin: 2em auto;
 }
